Fix tags on tablet size

--- a/scss/modules/lists.scss
+++ b/scss/modules/lists.scss
@@ -65,7 +65,7 @@
       padding: 0 20px 30px;
     }
 
-    @media (min-width: #{$screen-desktop}) {
+    @media (min-width: #{$screen-tablet}) {
       display: flex;
     }
 
